main_test = executable('main_test', 'main.cpp', link_with: image_lib)
test('Main test', main_test)

distance_transform_test = executable('distance_transform_test', 'distance_transform.cpp', link_with: image_lib)
test('Distance Transform test', distance_transform_test)

labyrinth_test = executable('labyrinth_test', 'labyrinth.cpp', link_with: image_lib)
test('Labyrinth test', labyrinth_test)
